# covey-plugins

./: Cargo.toml  install-all.sh  justfile
app-switcher/: Cargo.toml  manifest.toml
app-switcher/src/: lib.rs  main.rs
code-projects/: Cargo.toml  manifest.toml
code-projects/src/: lib.rs  main.rs
echo/: Cargo.toml  manifest.toml
echo/src/: lib.rs  main.rs
find/: Cargo.toml  manifest.toml
find/src/: main.rs
latex/: Cargo.toml  manifest.toml  mapping.csv
latex/src/: lib.rs  main.rs
open/: Cargo.toml  README.md  manifest.toml
open/src/: lib.rs  main.rs
qalc/: Cargo.toml  manifest.toml
qalc/src/: lib.rs  main.rs
system-power/: Cargo.toml  manifest.toml
system-power/src/: main.rs
text-edit/: Cargo.toml  manifest.toml
text-edit/src/: main.rs
zealdoc/: Cargo.toml  manifest.toml
zealdoc/src/: lib.rs  main.rs
