[workspace]
members = [
    "echo",
    "app-switcher",
    "qalc",
    "code-projects",
    "open",
    "zealdoc",
    "latex",
    "text-edit",
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
covey-plugin = { path = "../covey/covey-plugin" }

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true
